Make it work with Java 11