@@ -10,7 +10,7 @@ buildscript {
         mavenLocal()
         jcenter()
         maven {
-            url 'https://oss.sonatype.org/content/groups/public'
+            url "https://oss.sonatype.org/content/groups/public"
         }
     }
 }
@@ -21,9 +21,12 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.0.0'
     id "com.simonharrer.modernizer" version '1.6.0-1'
     id 'me.champeau.gradle.jmh' version '0.4.8'
-    id 'net.ltgt.errorprone' version '0.8'
+    //id 'net.ltgt.errorprone' version '0.8'
     id 'com.github.ben-manes.versions' version '0.21.0'
-    id 'com.zyxist.chainsaw' version '0.3.1'
+    //id 'com.zyxist.chainsaw' version '0.3.1'
+    id 'application'
+    id 'org.javamodularity.moduleplugin' version '1.5.0'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
 }
 
 // use the gradle build scan feature: https://scans.gradle.com/get-started
@@ -49,8 +52,9 @@ project.ext.threeDotVersion = "5.0.0.0"
 project.ext.install4jDir = hasProperty("install4jDir") ? getProperty("install4jDir") : (OperatingSystem.current().isWindows() ? 'C:/Program Files/install4j7' : 'install4j7')
 sourceCompatibility = 9
 targetCompatibility = 9
-mainClassName = "org.jabref.JabRefMain"
+mainClassName = "$moduleName/org.jabref.JabRefMain"
 
+/*
 javaModule {
     name = "org.jabref"
     hacks {
@@ -60,6 +64,14 @@ javaModule {
         exports "javafx.base", "com.sun.javafx.runtime", "controlsfx"
     }
 }
+*/
+
+patchModules.config = [
+        "latex2unicode=latex2unicode_2.12-0.2.2.jar",
+        "test=fastparse_2.12-0.4.2.jar",
+        "test2=fastparse-utils_2.12-0.4.2.jar",
+        "test3=sourcecode_2.12-0.1.3.jar"
+]
 
 
 // These are the Java version requirements we will check on each start of JabRef
@@ -102,6 +114,11 @@ configurations {
     }
 }
 
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
+}
+
 dependencies {
     // Include all jar-files in the 'lib' folder as dependencies
     compile fileTree(dir: 'lib', includes: ['*.jar'])
@@ -117,10 +134,10 @@ dependencies {
 
     compile 'commons-cli:commons-cli:1.4'
 
-    compile "org.libreoffice:juh:6.2.3"
-    compile "org.libreoffice:jurt:6.2.3"
-    compile "org.libreoffice:ridl:6.2.3"
-    compile "org.libreoffice:unoil:6.2.3"
+    //compile "org.libreoffice:juh:6.2.3"
+    //compile "org.libreoffice:jurt:6.2.3"
+    //compile "org.libreoffice:ridl:6.2.3"
+    //compile "org.libreoffice:unoil:6.2.3"
 
     compile 'io.github.java-diff-utils:java-diff-utils:4.0'
     compile 'info.debatty:java-string-similarity:1.2.1'
@@ -142,9 +159,9 @@ dependencies {
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
     // JavaFX stuff
-    compile 'de.jensd:fontawesomefx-commons:8.15'
-    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
-    compile 'de.saxsys:mvvmfx-validation:1.8.0'
+    compile 'de.jensd:fontawesomefx-commons:9.00'
+    compile 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9'
+    compile 'de.saxsys:mvvmfx-validation:1.9.0-SNAPSHOT'
     compile 'de.saxsys:mvvmfx:1.8.0'
     compile 'org.fxmisc.easybind:easybind:1.0.3'
     compile 'org.fxmisc.flowless:flowless:0.6.1'
@@ -152,9 +169,7 @@ dependencies {
     //compile 'com.sibvisions.external.jvxfx:dndtabpane:0.1'
     compile 'javax.inject:javax.inject:1'
     compile 'com.jfoenix:jfoenix:9.0.8'
-
-    // Cannot be updated to 9.*.* until Jabref works with Java 9
-    compile 'org.controlsfx:controlsfx:9.0.0'
+    compile 'org.controlsfx:controlsfx:11.0.0'
 
     compile 'org.jsoup:jsoup:1.11.3'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
@@ -170,10 +185,13 @@ dependencies {
 
     // JAX-B is considered JavaEE API and is no longer part of JavaSE (JDK 9)
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
+    compile 'com.sun.activation:javax.activation:1.2.0'
+    //compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
+
+
     compile 'com.github.tomtung:latex2unicode_2.12:0.2.2'
 
-    errorprone 'com.google.errorprone:error_prone_core:2.3.2'
+    //errorprone 'com.google.errorprone:error_prone_core:2.3.2'
 
     compile group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '2.3.1'
     compile group: 'com.microsoft.azure', name: 'applicationinsights-logging-log4j2', version: '2.3.1'
@@ -366,7 +384,49 @@ tasks.withType(JavaCompile) {
 compileJava {
     options.compilerArgs << "-Xlint:none"
     dependsOn "generateSource"
+
+    moduleOptions {
+        addExports = [
+                'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
+                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref'
+        ]
+    }
 }
+
+run {
+    jvmArgs '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=org.jabref',
+            '--add-exports', 'org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref',
+            '--add-opens', 'javafx.controls/javafx.scene.control=org.jabref',
+            '--add-opens', 'org.controlsfx.controls/org.controlsfx.control.textfield=org.jabref',
+            // Not sure why we need to restate the controlfx exports
+            // Taken from here: https://github.com/controlsfx/controlsfx/blob/9.0.0/build.gradle#L1
+            "--add-exports", "javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+            "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+            "--add-exports", "javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
+            "--add-exports", "javafx.base/com.sun.javafx.event=org.controlsfx.controls",
+            "--add-exports", "javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
+            "--add-exports", "javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
+            "--add-exports", "javafx.web/com.sun.webkit=org.controlsfx.controls",
+            "--add-exports", "javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+            "--add-opens", "javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            "--add-opens", "javafx.graphics/javafx.scene=org.controlsfx.controls"
+
+    moduleOptions {
+        addExports = [
+                'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
+                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref'
+        ]
+
+        addOpens = [
+                'javafx.controls/javafx.scene.control' : 'org.jabref',
+                'org.controlsfx.controls/org.controlsfx.control.textfield' : 'org.jabref'
+        ]
+    }
+}
+
 
 javadoc {
     options {
